content/boundary/v0.11.x/content/docs/concepts/domain-model/credentials.mdx
---
layout: docs
page_title: Domain Model - Credentials
description: |-
  The anatomy of a Boundary credential
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# Credentials

A credential is a data structure containing one or more secrets
that binds an identity to a set of permissions or capabilities
on a [host][] for a [session][].

## Attributes

## Credential Types

Optionally, credentials can be typed to indicate compliance with a specific
format.

### Username Password

`username_password` credentials contain the following fields:

- `username` - The username field associated with the credential.

- `password` - The password field associated with the credential.

### SSH Private Key

`ssh_private_key` credentials contain the following fields:

- `username` - The username field associated with the credential.

- `private_key` - The private key field associated with the credential.

## Referenced By

- [Credential Store][]
- [Credential Library][]
- [Session][]

[credential library]: /docs/concepts/domain-model/credential-libraries
[credential libraries]: /docs/concepts/domain-model/credential-libraries
[credential store]: /docs/concepts/domain-model/credential-stores
[credential stores]: /docs/concepts/domain-model/credential-stores
[host]: /docs/concepts/domain-model/hosts
[session]: /docs/concepts/domain-model/sessions
